JDK 11 port: hand-ported core roots (util, io, http, server, client, xml, util-ajax)
- org.eclipse.jetty.io.UnixDomain: reflective access to the Java 16 Unix-Domain
  socket APIs (same approach as Jetty 11); Transport.Unix, ProxyConnectionFactory,
  ProxyProtocolClientConnectionFactory and UnixDomainServerConnector use it,
  tests are gated with @EnabledForJreRange(min = JAVA_16)
- records converted to classes (accessor names unchanged), sealed types unsealed
- BufferUtil.absoluteSlice replaces ByteBuffer.slice(int, int) (Java 13)
- HexFormat, InputStream.skipNBytes, ByteBuffer.put(int, ByteBuffer, int, int)
  replaced with Java 11 equivalents
- JSON/AsyncJSON record support goes through a reflective RecordSupport helper
  (works at runtime on Java 16+, degrades gracefully on Java 11); the
  record-only tests are removed since records cannot be declared in Java 11 sources
- junit.platform.version pinned to 1.14.4 (JUnit 5.14 platform)